      % Average.

      %% TODO: change in ../src/library/compiler/noweb/compiler.nw + ..../R/cmp.R
      \item \code{switch(f, ...)} now warns when \code{f} is a factor,
      as this typically happens accidentally where the useR meant to
      pass a character string, but \code{f} is treated as integer (as
      always documented).

      \item The parser has been modified to use less memory.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item There is some support for parallel testing of an
      installation, by setting \env{TEST_MC_CORES} is set to an integer
      greater than one to indicate the maximum number of cores to be
      used in parallel. (It is worth specifying at least 8 cores if
      available.)  Most of these require a \command{make} program (such
      as GNU \command{make} and \command{dmake}) which supports the
      \command{${MAKE} -j nproc} syntax.

      Except on Windows: the tests of standard package examples in
      \command{make check} are done in parallel using that number of
      cores.  This also applies to running
      \code{tools::testInstalledPackages()}.

      The more time-consuming regression tests are done in parallel.

      The package checks in \command{make check-devel} and \command{make
      check-recommended} are done in parallel.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item In the \file{DESCRIPTION} file, \preformatted{    License: X11}
      is no longer recognized as valid.  Use \sQuote{MIT} or
      \sQuote{BSD_2_clause} instead.

      \item For consistency, entries in \file{.Rinstignore} are now matched
      case-insensitively on all platforms.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item For consistency, \command{R CMD build} now matches entries
      in \file{.Rbuildignore}  and \file{vignettes/.install_extras}
      case-insensitively on all platforms (not just on Windows).

      \item \code{checkFF()} (called by \command{R CMD check} by